Tweaks to SI figures

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -1068,7 +1068,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_supp_hyper_torque = plt.figure(figsize=(5.5,7))\n",
+    "fig_supp_hyper_torque = plt.figure(figsize=(5,7))\n",
     "fig_supp_hyper_torque_gridspec = gridspec.GridSpec(5, 2, figure=fig_supp_hyper_torque,\n",
     "    wspace=0.1, hspace=0.15, height_ratios=[1,1.2,1,1,1])\n",
     "fig_supp_hyper_torque_subfigures = {\n",
@@ -1098,9 +1098,9 @@
    "source": [
     "energy_df = pd.read_csv(rd.infile(rd.rootdir/'data'/'rnap_delta_bubble_energy.csv', 'fig_supp_torque_energy'), names=['sigma','energy_bubble', 'energy_nobubble'])\n",
     "energy_df['raw_torque'] = energy_df.energy_nobubble / (1.2 * 2 * np.pi)\n",
-    "fig_supp_hyper_torque_subfigures['A'].subplots_adjust(left=0.25, bottom=0.3, right=0.8, top=0.85)\n",
+    "fig_supp_hyper_torque_subfigures['A'].subplots_adjust(left=0.25, bottom=0.35, right=0.8, top=0.85)\n",
     "torque_ax = fig_supp_hyper_torque_subfigures['A'].subplots(ncols=1)\n",
-    "fig_supp_hyper_torque_subfigures['B'].subplots_adjust(left=0.25, bottom=0.3, right=0.8, top=0.85)\n",
+    "fig_supp_hyper_torque_subfigures['B'].subplots_adjust(left=0.25, bottom=0.35, right=0.8, top=0.85)\n",
     "energy_ax = fig_supp_hyper_torque_subfigures['B'].subplots(ncols=1)\n",
     "\n",
     "energy_ax.axvline(x=0, color=main_palette['gray'], label='_')\n",
@@ -1135,11 +1135,11 @@
     "stall_torque = [8, 10, 12, 14, 16]\n",
     "stall_width = [1,3,5]\n",
     "fig_supp_hyper_torque_subfigures['C'].subplots_adjust(left=0.1, bottom=0.3, right=0.95, top=0.65)\n",
-    "fig_hyper_dcoeff_axes = fig_supp_hyper_torque_subfigures['C'].subplots(ncols=len(drag_coeffs), sharex=True, sharey=True)\n",
+    "fig_hyper_dcoeff_axes = fig_supp_hyper_torque_subfigures['C'].subplots(ncols=len(drag_coeffs), sharex=True, sharey=True, gridspec_kw={'wspace': 0.5})\n",
     "fig_supp_hyper_torque_subfigures['D'].subplots_adjust(left=0.1, bottom=0.3, right=0.95, top=0.7)\n",
-    "fig_hyper_dexp_axes = fig_supp_hyper_torque_subfigures['D'].subplots(ncols=len(drag_exp), sharex=True, sharey=True)\n",
-    "fig_hyper_storque_axes = fig_supp_hyper_torque_subfigures['E'].subplots(ncols=len(stall_torque), sharex=True, sharey=True)\n",
-    "fig_hyper_swidth_axes = fig_supp_hyper_torque_subfigures['F'].subplots(ncols=len(stall_width), sharex=True, sharey=True)\n",
+    "fig_hyper_dexp_axes = fig_supp_hyper_torque_subfigures['D'].subplots(ncols=len(drag_exp), sharex=True, sharey=True, gridspec_kw={'wspace': 1.1})\n",
+    "fig_hyper_storque_axes = fig_supp_hyper_torque_subfigures['E'].subplots(ncols=len(stall_torque), sharex=True, sharey=True, gridspec_kw={'wspace': 0.5})\n",
+    "fig_hyper_swidth_axes = fig_supp_hyper_torque_subfigures['F'].subplots(ncols=len(stall_width), sharex=True, sharey=True, gridspec_kw={'wspace': 1.1})\n",
     "for ax, dcoeff in zip(fig_hyper_dcoeff_axes,drag_coeffs):\n",
     "    sns.lineplot(data=hyper_extract_df(hyperparameters_df, drag_coeff=dcoeff),\n",
     "            x='norm_induction', y='constant_mRNA', hue='condition', palette=fig_supp_hyper_torque_palette,\n",
@@ -1158,7 +1158,7 @@
     "plot_genes_unified(diagram_axes, [(0.35, 0.36), (0.40, 0.41)], [main_palette['gray'], main_palette['tandem_alt']], base_line_extents=(0.3,0.45), plot_gene_body=False, plot_inducible=0)\n",
     "plot_genes_unified(diagram_axes, [(0.6, 0.61), (0.65, 0.64)], [main_palette['gray'], main_palette['convergent']], base_line_extents=(0.55,0.7), plot_gene_body=False, plot_inducible=0)\n",
     "plot_genes_unified(diagram_axes, [(0.86, 0.85), (0.90, 0.91)], [main_palette['gray'], main_palette['divergent']], base_line_extents=(0.8,0.95), plot_gene_body=False, plot_inducible=0)\n",
-    "fig_supp_hyper_torque_subfigures['C'].text(0.53, 0.7, \"mRNA drag coefficent\", ha='center', fontsize=font_sizes['subaxis_title'])\n",
+    "fig_supp_hyper_torque_subfigures['C'].text(0.53, 0.73, \"mRNA drag coefficent\", ha='center', fontsize=font_sizes['subaxis_title'])\n",
     "for ax, dexp in zip(fig_hyper_dexp_axes,drag_exp):\n",
     "    sns.lineplot(data=hyper_extract_df(hyperparameters_df, drag_exp=dexp),\n",
     "            x='norm_induction', y='constant_mRNA', hue='condition', palette=fig_supp_hyper_torque_palette,\n",
@@ -2311,9 +2311,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_supp_dynamics_details = plt.figure(figsize=(6.5,9))\n",
+    "fig_supp_dynamics_details = plt.figure(figsize=(6.2,8.2))\n",
     "fig_supp_dynamics_details_gridspec = gridspec.GridSpec(4,2, figure=fig_supp_dynamics_details,\n",
-    "    wspace=0.1, hspace=0.1, height_ratios=[1.6,1.5,1,1])\n",
+    "    wspace=0.1, hspace=0.1, height_ratios=[1.6,1.5,0.8,0.8])\n",
     "fig_supp_dynamics_details_subfigures = {\n",
     "    'A': fig_supp_dynamics_details.add_subfigure(fig_supp_dynamics_details_gridspec[0,:]),\n",
     "    'B': fig_supp_dynamics_details.add_subfigure(fig_supp_dynamics_details_gridspec[1,0]),\n",
@@ -2485,7 +2485,7 @@
     "# Create the overall figure, gridspec, and add subfigure labels.\n",
     "# Plot overall burst duration as a function of induction and condition\n",
     "conditions = [f'fig.bm.sc_bursts.{x}' for x in ['tandem_reporter_upstream', 'tandem_reporter_downstream', 'convergent', 'divergent']]\n",
-    "fig_supp_dynamics_details_subfigures['D'].subplots_adjust(left=0.08, bottom=0.29, right=0.95, top=0.9)\n",
+    "fig_supp_dynamics_details_subfigures['D'].subplots_adjust(left=0.1, bottom=0.33, right=0.95, top=0.8)\n",
     "fig_burst_threshold_size_axes = fig_supp_dynamics_details_subfigures['D'].subplots(ncols=4, sharey=True, sharex=True)\n",
     "bm_supp_bursting_df = bursting_df_selected[\n",
     "    (bursting_df_selected.inter_rnap_gene == 2) &\n",
@@ -2513,7 +2513,7 @@
     "    sns.despine(ax=ax)\n",
     "fig_supp_dynamics_details_subfigures['D'].text(0.5, 0.08, 'Burst size', ha='center')\n",
     "# Plot inter-burst time as a function of induction\n",
-    "fig_supp_dynamics_details_subfigures['E'].subplots_adjust(left=0.08, bottom=0.29, right=0.95, top=0.9)\n",
+    "fig_supp_dynamics_details_subfigures['E'].subplots_adjust(left=0.1, bottom=0.33, right=0.95, top=0.8)\n",
     "fig_burst_threshold_interburst_axes = fig_supp_dynamics_details_subfigures['E'].subplots(ncols=4, sharey=True, sharex=True)\n",
     "for ax, threshold in zip(fig_burst_threshold_interburst_axes, [10,20,30,60]):\n",
     "    sns.kdeplot(data=bm_supp_bursting_df[bm_supp_bursting_df.burst_threshold == threshold], x='inter_burst_time', hue='condition',\n",
@@ -3712,7 +3712,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_supp_zinani = plt.figure(figsize=(6.5,9))\n",
+    "fig_supp_zinani = plt.figure(figsize=(6.5,8.5))\n",
     "fig_supp_zinani_gridspec = gridspec.GridSpec(7, 2, figure=fig_supp_zinani,\n",
     "    wspace=0.1, hspace=0.1)\n",
     "fig_supp_zinani_subfigures = {\n",
@@ -3905,7 +3905,7 @@
     "    ax.set_ylabel('Cross-correlation')\n",
     "    ax.text(0.5, 1.1, zinani_topo_map[topo_type]+' α=0.02', ha='center', fontsize=font_sizes['subaxis_title'], transform=ax.transAxes)\n",
     "    ax.text(900, 0.6, 'Unpaired', fontsize=font_sizes['data_annotation'], color=fig_supp_zinani_palette['fig.zinani.uncoupled'], ha='left')\n",
-    "    ax.text(900, 0.48, 'Paired', fontsize=font_sizes['data_annotation'], color=fig_supp_zinani_palette['fig.zinani.tangles-coupled'], ha='left')\n",
+    "    ax.text(900, 0.4, 'Paired', fontsize=font_sizes['data_annotation'], color=fig_supp_zinani_palette['fig.zinani.tangles-coupled'], ha='left')\n",
     "\n",
     "# Plot Zinani correlation coefficient\n",
     "fig_zinani_topo_df['full_condition'] = fig_zinani_topo_df.condition + '.' + fig_zinani_topo_df.topo_type\n",
@@ -3985,7 +3985,7 @@
     "    ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
     "    ax.set_facecolor(zinani_facecolor_map[topo_type])\n",
     "    ax.set_xlabel('')\n",
-    "    ax.set_ylabel('mRNA counts')\n",
+    "    ax.set_ylabel('')\n",
     "\n",
     "    text_y = 0.83\n",
     "    # Do location-specific things\n",
@@ -4003,6 +4003,7 @@
     "    ax.text(0.48, text_y, 'her1', fontsize=font_sizes['subaxis_title'], color=fig_supp_zinani_palette['her1'], transform=ax.transAxes, fontstyle='italic')\n",
     "    ax.text(0.58, text_y, 'her7', fontsize=font_sizes['subaxis_title'], color=fig_supp_zinani_palette['her7'], transform=ax.transAxes, fontstyle='italic')\n",
     "    ax.set_ylim(bottom=0)\n",
+    "fig_supp_zinani_subfigures['H'].text(0.07, 0.5, 'mRNA counts', ha='center', va='center', rotation='vertical')\n",
     "fig_supp_all_topo_mRNA_axes[0].yaxis.labelpad = 8.5\n",
     "\n",
     "# Plot crosscorrelation axes\n",
@@ -5003,7 +5004,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('env': venv)",
+   "display_name": "Python 3.9.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -5016,11 +5017,12 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "0c794e66d6a09a8111bf4a21f014578608c51cd50f61c607fe86c6d3036aead4"
+    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
    }
   }
  },
