--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -5004,7 +5004,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('env': venv)",
+   "display_name": "Python 3.10.6 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -5017,12 +5017,11 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "pygments_lexer": "ipython3"
   },
   "vscode": {
    "interpreter": {
-    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
+    "hash": "0c794e66d6a09a8111bf4a21f014578608c51cd50f61c607fe86c6d3036aead4"
    }
   }
  },
