--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -1146,7 +1146,7 @@
     "            ax=ax, legend=None)\n",
     "    sns.despine(ax=ax)\n",
     "    ax.set_xlabel('')\n",
-    "    ax.text(0.5, 1.0, f'η={dcoeff} (pN nm^(β - 1))', ha='center', fontsize=font_sizes['data_annotation'],\n",
+    "    ax.text(0.5, 1.05, f'η={dcoeff} (pN nm^(β - 1))', ha='center', fontsize=font_sizes['data_annotation'],\n",
     "            transform=ax.transAxes)\n",
     "diagram_axes = fig_supp_hyper_torque_subfigures['C'].add_axes([0.1,0.8,0.85,0.001])\n",
     "diagram_axes.set_axis_off()\n",
@@ -3152,7 +3152,7 @@
    "outputs": [],
    "source": [
     "# Plot burst dynamics\n",
-    "fig_supp_extra_toggles_subfigures['C'].subplots_adjust(left=0.3, bottom=0.2, right=0.95, top=0.8)\n",
+    "fig_supp_extra_toggles_subfigures['C'].subplots_adjust(left=0.3, bottom=0.24, right=0.95, top=0.8)\n",
     "fig_toggles_interburst_ax = fig_supp_extra_toggles_subfigures['C'].subplots(ncols=1, nrows=1)\n",
     "burst_df = bursting_df[\n",
     "    (bursting_df.alpha == 0.025) &\n",
@@ -5004,7 +5004,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('env': venv)",
+   "display_name": "Python 3.9.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -5017,11 +5017,12 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "0c794e66d6a09a8111bf4a21f014578608c51cd50f61c607fe86c6d3036aead4"
+    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
    }
   }
  },
